--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
-  "name": "wp-theme-prototype",
+  "name": "champee",
   "version": "1.0.0",
-  "description": "WordPress theme prototype with Gulp asset pipeline includes SASS, Uglify, Imagemin and more",
+  "description": "Champee, official WordPress theme that made for blog",
   "main": "index.php",
   "scripts": {
     "dev": "gulp",
     "vendor": "gulp build-lib-css",
     "test": "eslint js/main.js"
   },
-  "repository": "https://github.com/jir4yu/wp-theme-prototype.git",
+  "repository": "https://github.com/jir4yu/champee.git",
   "author": "Jirayu Limjinda <jir4yu.l@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "bootstrap": "^4.2.1",
     "flexibility": "^2.0.1",
     "gulp": "=3.9.1",
     "gulp-autoprefixer": "^4.0.0",
