--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Jirayu Limjinda <jir4yu.l@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "blazy": "^1.8.2",
     "bootstrap": "^4.2.1",
     "flexibility": "^2.0.1",
     "gulp": "=3.9.1",
@@ -28,12 +29,14 @@
     "gulp-uglify-es": "^1.0.4",
     "gulp-watch": "^5.0.1",
     "jquery-stickit": "^0.2.62",
+    "picturefill": "^3.0.3",
     "run-sequence": "^2.2.0"
   },
   "devDependencies": {
     "eslint": "^5.6.1",
     "gulp-clean": "^0.3.2",
     "gulp-concat-css": "^2.3.0",
-    "gulp-shell": "^0.6.5"
+    "gulp-shell": "^0.6.5",
+    "gulp-webp": "^3.0.0"
   }
 }
